Add vicinity rendering to public transport areas